--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -3,7 +3,7 @@
     <th:block th:fragment="headerFragment">
         <div class="row mt-3">
             <div class="col-4">
-                <h1 style="color: white;">화재모니터링 시스템</h1>
+                <h1 style="color: white;" onclick="gomain()">화재모니터링 시스템</h1>
             </div>            
         </div>
         <div class="row">
