--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -22,7 +22,7 @@
 </style>
 </head>
 <body>
-    <div class="container-fluid" style="border: 1px solid black;">
+    <div class="container-fluid">
         <div class="row headerRow">
             <div class="col">
                 <th:block th:replace="~{fragment/main_header::headerFragment}"></th:block>
