--- a/src/main/resources/templates/fragment/result_layout.html
+++ b/src/main/resources/templates/fragment/result_layout.html
@@ -28,6 +28,7 @@
         </div>
         
     </div>
+    <script src="/js/main_header.js"></script>
     <th:block layout:fragment="content_jsp">
     </th:block>
 </body>
