--- a/src/main/resources/templates/content/sido/sido_month_property.html
+++ b/src/main/resources/templates/content/sido/sido_month_property.html
@@ -112,7 +112,7 @@
                                                 </colgroup>
                                                 
                                                 <tr class="tr-row">
-                                                    <th>년도</th>
+                                                    <th>연도</th>
                                                 </tr>
                                                 <tr class="tr-row">
                                                     <th>월별</th>    
@@ -121,7 +121,7 @@
                                                     <th><span th:text="${monthStat.count}+'월'"></span></th>
                                                 </tr>
                                                 <tr class="tr-row" >
-                                                    <th>년도별 총계</th>
+                                                    <th>연도별 총계</th>
                                                 </tr>                            
                                             </table>
                                         </div>
