--- a/src/main/resources/templates/content/sido/sido_property.html
+++ b/src/main/resources/templates/content/sido/sido_property.html
@@ -67,7 +67,7 @@
                     <div class="col-6" style="text-align: center;">
                         <div class="row mb-3" >
                             <div class="col" >
-                                <h4><strong>[년도별] 화재 재산피해액</strong></h4>  
+                                <h4><strong>[연도별] 화재 재산피해액</strong></h4>  
                             </div>
                         </div>
                         
@@ -82,7 +82,7 @@
                     <div class="col-6" style="text-align: center;">
                         <div class="row mb-3" >
                             <div class="col">
-                                <h4><strong>[년도별] 화재 인명피해수</strong></h4>  
+                                <h4><strong>[연도별] 화재 인명피해수</strong></h4>  
                             </div>
                         </div>
                         
@@ -141,7 +141,7 @@
                                         </colgroup>
                                         
                                         <tr class="tr-row">
-                                            <th>년도</th>
+                                            <th>연도</th>
                                         </tr>
                                         <tr class="tr-row">
                                             <th>시도명</th>    
@@ -150,7 +150,7 @@
                                             <th>[[${sidoN.sidoNm}]]</th>
                                         </tr>
                                         <tr class="tr-row" >
-                                            <th>년도별 총계</th>
+                                            <th>연도별 총계</th>
                                         </tr>                            
                                     </table>
                                 </div>
