--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -16,10 +16,7 @@
                     <a class="nav-link" href="/sido/sidoFirst"><h3>시도별 화재피해</h3></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/ranking/place"><h3>화재피해 장소</h3></a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#"><h3>화재피해 원인</h3></a>
+                    <a class="nav-link" href="/statistics/statisticsFirst"><h3>화재통계</h3></a>
                     </li>
                 </ul>
             </div>
