--- a/src/main/resources/templates/content/sido/sido_month_property.html
+++ b/src/main/resources/templates/content/sido/sido_month_property.html
@@ -73,7 +73,7 @@
                         <div class="col-6" style="text-align: center;">                        
                             <div class="row mb-3" style="color: rgb(116, 113, 113);">
                                 <div class="col">
-                                    <h4><strong>년도별/월별  화재 재산피해액</strong></h4>  
+                                    <h4><strong>연도별/월별  화재 재산피해액</strong></h4>  
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -88,7 +88,7 @@
                         <div class="col-6" style="text-align: center;">                           
                             <div class="row mb-3" style="color: rgb(116, 113, 113);">
                                 <div class="col">
-                                    <h4><strong>년도별/월별  화재 인명피해수</strong></h4>  
+                                    <h4><strong>연도별/월별  화재 인명피해수</strong></h4>  
                                 </div>
                             </div>
                             <div class="row mb-3">
