--- a/src/main/resources/templates/fragment/jiwoo_side.html
+++ b/src/main/resources/templates/fragment/jiwoo_side.html
@@ -70,7 +70,7 @@
                         <th:block th:if="${year} == 2021">
                             2021
                         </th:block>    
-                        화재 인명피해인원수
+                        화재 인명피해 인원수
                     </div>
                 </div>
                 <div class="row">
@@ -94,7 +94,7 @@
                         <th:block th:if="${year} == 2021">
                             2021
                         </th:block>    
-                        화재 재산피해액
+                        화재 재산피해액<span style="font-size: 0.7rem;">(천원)</span>
                     </div>
                 </div>
                 <div class="row">
