--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -7,6 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <!-- <link rel="stylesheet" href="/css/common.css"> -->
 <link rel="stylesheet" href="/css/eunji_side.css">
+<link rel="stylesheet" href="/css/common.css">
 <style>
     .headerRow {height: 140px;
                 background-color: skyblue;
