--- a/src/main/resources/templates/fragment/songmin_side.html
+++ b/src/main/resources/templates/fragment/songmin_side.html
@@ -647,14 +647,61 @@
                     </div>
                 </div>
             </div>
+
             <!-- 월 예상 위험요일 -->
             <div class="col-4 d-grid">
                 <div class="row">
                     <div class="col">
-                        <h4>월 예상 위험요인</h4>
+                        <span class="show-avg-title" style="font-size: 2rem; font-weight: bold;">월 예상 위험요인</span>
+                        <div style="font-size: .9rem; color: gray; margin-left: .5rem;">* 2021~2023년 3개년 기준</div>
                     </div>
                 </div>
-                <div class="row"></div>
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <div class="col-1 mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18"
+                                    height="18" fill="currentColor"
+                                    class="bi bi-geo-alt-fill text-danger"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
+                                </svg>
+                            </div>
+                            <div class="col">
+                                발화장소
+                            </div>
+                        </div>
+                        <div class="row mb-5 show-avgFirePlace">
+                            <div class="col">
+                                데이터
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18"
+                                    height="18" fill="currentColor"
+                                    class="bi bi-clipboard-data text-danger"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M4 11a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm6-4a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zM7 9a1 1 0 0 1 2 0v3a1 1 0 1 1-2 0z" />
+                                    <path
+                                        d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z" />
+                                    <path
+                                        d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z" />
+                                </svg>
+                            </div>
+                            <div class="col">
+                                발화요인
+                            </div>
+                        </div>
+                        <div class="row show-avgFireFactor">
+                            <div class="col">
+                                데이터
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
