--- a/src/main/resources/templates/fragment/songmin_side.html
+++ b/src/main/resources/templates/fragment/songmin_side.html
@@ -22,7 +22,7 @@
         }
     </style>
 
-    <div style="padding: 12px;">
+    <div style="padding-left: 12px; padding-right: 12px; padding-bottom: 12px;">
         <input type="hidden" id="yearSongmin" th:value="${year}">
         <div class="row">
             <div class="col-8">
@@ -649,14 +649,14 @@
             </div>
 
             <!-- 월 예상 위험요일 -->
-            <div class="col-4" style="height: 306px;">
-                <div class="row mb-3">
+            <div class="col-4" >
+                <div class="row">
                     <div class="col">
                         <span class="show-avg-title" style="font-size: 1.9rem; font-weight: bold;">월 예상 위험요인</span>
                         <div style="font-size: 1rem; color: gray; margin-left: .5rem;">* 2021~2023년 3개년 기준</div>
                     </div>
                 </div>
-                <div class="row" style="margin-top: 16px;">
+                <div class="row" style="padding-top: 16px;">
                     <div class="col">
                         <div class="row mb-5 border-top border-4 border-secondary-subtle" >
                             <div class="col">
@@ -680,10 +680,6 @@
                                         데이터
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row " style="margin-bottom: 1px;" >
-                            <div class="col">
                             </div>
                         </div>
                         <div class="row">
@@ -714,8 +710,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row border-bottom border-4 border-secondary-subtle" style="margin-top:25px;" >
-                            <div class="col"></div>
+                        <div class="border-bottom border-4 border-secondary-subtle" style="margin-top:25px;" >
                         </div>
                     </div>
                 </div>
