--- a/src/main/resources/templates/fragment/eunji_side.html
+++ b/src/main/resources/templates/fragment/eunji_side.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-   
-    
     <th:block th:fragment="eunjiSideFragment">
         <!-- html 코드 작성 -->
-        <div class="row">
-            <div class="col">
+        <div class="row" >
+            <div class="col" >
+                <div class="row mt-1">
+                    <div class="col">
+                        <span class="states-span-tag" style="font-size: 1.8rem; font-weight: bold;"></span>
+                    </div>
+                </div>
                 <div class="row">
-                    <div class="offset-2 d3_test" id="map" style="position: relative;">
+                    <div class="offset-3 d3_test" id="map" style="position: relative;">
                         <div id="tooltip">
-                            <span id="tooltip-name">지역명: </span><br>
-                            <span id="tooltip-count">발생 건수: </span>
+                            <span id="tooltip-name"></span><br>
+                            <span id="tooltip-count"></span>
                         </div>
                     </div>
                 </div>
