--- a/src/main/resources/templates/fragment/img_side.html
+++ b/src/main/resources/templates/fragment/img_side.html
@@ -14,7 +14,7 @@
                             소방차
                         </h3>
                     </div>
-                    <div class="col text-end" style="margin-right: 1.5%;">
+                    <div class="col text-end">
                         <a class="icon-link link-secondary icon-link-hover" style="--bs-link-hover-color-rgb: 0, 0, 0;" href="#">
                             바로가기
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right-square" viewBox="0 0 16 16">
