--- a/src/main/resources/templates/fragment/jiwoo_side.html
+++ b/src/main/resources/templates/fragment/jiwoo_side.html
@@ -32,11 +32,10 @@
 
 
         <input type="hidden" id="yearJiwoo" th:value="${year}">
-        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 350px;  top: 10px; left: 400px; position: relative; ">
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
-                        
                         <th:block th:if="${year} == 2023">
                             2023
                         </th:block>
@@ -51,13 +50,13 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="fireCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                        <div class="fireCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder; text-align: end;"></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 350px;  top: 10px; left: 400px; position: relative; ">
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
@@ -75,13 +74,13 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="victimCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                        <div class="victimCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder; text-align: end;"></div>
                     </div>
                 </div>
             </div>
         </div>
         
-        <div class="row" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+        <div class="row" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 350px;  top: 10px; left: 400px; position: relative; ">
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
@@ -94,12 +93,12 @@
                         <th:block th:if="${year} == 2021">
                             2021
                         </th:block>    
-                        화재 재산피해액<span style="font-size: 0.7rem;">(천원)</span>
+                        화재 재산피해액
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="propertyCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                        <div class="propertyCount" style="color: rgb(231, 127, 235); font-size: 30px; font-weight: bolder; text-align: end;"></div>
                     </div>
                 </div>
             </div>
