--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <th:block th:fragment="headerFragment">
-        <div class="row mt-3">
-            <div class="col-4">
-                <h1 style="color: white;" onclick="gomain()">화재모니터링 시스템</h1>
-            </div>            
+<th:block th:fragment="headerFragment">
+    <div class="row mt-3" onclick="gomain()">
+        <div class="col-6">
+            <img src="/img/symbol.png" style="height: 110px;"><span style="font-weight: bold; font-size: 3rem;">화재모니터링 시스템</span>
         </div>
-        <div class="row">
-            <div class="col-11">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><h3>년도별 화재피해</h3></a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/sido/sidoFirst"><h3>시도별 화재피해</h3></a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/statistics/statisticsFirst"><h3>화재통계</h3></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-1">
-                <select class="form-select" id="yearChanger" name="selectYear" onchange="year_changer()">
-                    <option value="2021" th:selected="${year} == '2021'">2021</option>
-                    <option value="2022" th:selected="${year} == '2022'">2022</option>
-                    <option value="2023" th:selected="${year} == '2023'">2023</option>
-                </select>
-            </div>
-        </div>            
-    </th:block>
+        <div class="col-5">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">
+                        <h3>Home</h3>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">
+                        <h3>연도별 화재피해</h3>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sido/sidoFirst">
+                        <h3>시도별 화재피해</h3>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/statistics/statisticsFirst">
+                        <h3>화재통계</h3>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-1" th:if="${year}">
+            <select class="form-select" id="yearChanger" name="selectYear" onchange="year_changer()">
+                <option value="2021" th:selected="${year} == '2021'">2021</option>
+                <option value="2022" th:selected="${year} == '2022'">2022</option>
+                <option value="2023" th:selected="${year} == '2023'">2023</option>
+            </select>
+        </div>
+    </div>
+
+
+</th:block>
+
 </html>
