header design complete

--- a/src/main/resources/templates/fragment/result_layout.html
+++ b/src/main/resources/templates/fragment/result_layout.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="/css/eunji_side.css">
 <style>
     .headerRow {height: 140px;
-                background-color: skyblue;
+                /* background-color: skyblue; */
                 margin:0px 20px 0px 20px}
 </style>
 </head>
