--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <th:block th:fragment="headerFragment">
-    <div class="row mt-3" onclick="gomain()">
-        <div class="col-1" style="margin-top: 0.5%; padding-left: 2.5%;" >
+    <div class="row mt-3">
+        <div class="col-1" style="margin-top: 0.5%; padding-left: 2.5%;" onclick="gomain()">
             <img src="/img/symbol.png" style="height: 18%;">
         </div>
-        <div class="col-2" style="padding-top: .5%;">
+        <div class="col-2" style="padding-top: .5%;" onclick="gomain()">
             <span style="font-weight: bold; font-size: 1.8rem;">화재모니터링 시스템</span>
         </div>
         <div class="col-7" style="margin-top: .5%; padding-right: 20%; font-weight: bold;">
