--- a/src/main/resources/templates/content/dmg/dmg_list.html
+++ b/src/main/resources/templates/content/dmg/dmg_list.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{fragment/result_layout}" >
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{fragment/result_layout}">
 
 <th:block layout:fragment="content_css">
   <!-- html 파일이 열릴 때 같이 실행 되는 css -->
@@ -10,11 +9,306 @@
 
 <th:block layout:fragment="contentFragment">
   <!-- html 코드 작성-->
-  asd
+  <style>
+    .small-layer {
+      height: 336.8px;
+      width: 400px;
+    }
+
+    .more-small-layer {
+      height: 75px;
+      width: 400px;
+    }
+
+    .layer {
+      border: 1px solid #dddddd;
+      border-radius: 10px;
+      background-color: white;
+      margin: 35px;
+      overflow: hidden;
+      padding: 0 50px;
+      position: relative;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+    #first_total {
+      position: absolute;
+      top: -0px;
+      transition: 2s;
+    }
+
+    #second_total {
+      position: absolute;
+      top: -0px;
+      transition: 2s;
+    }
+
+    #first_chart {
+      position: absolute;
+      top: -0px;
+      transition: 2s;
+    }
+
+    #first_chart>div {
+      padding: 0px;
+    }
+
+    #second_chart {
+      position: absolute;
+      top: -0px;
+      transition: 2s;
+    }
+
+    #second_chart>div {
+      padding: 0px;
+    }
+  </style>
+  <div class="row" style="height: 810px;">
+    <div class="col-6">
+      <div class="row">
+        <div class="col">
+          피해통계
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <table class="table text-center">
+            <colgroup>
+              <col width="25%">
+              <col width="25%">
+              <col width="25%">
+              <col width="25%">
+            </colgroup>
+            <thead>
+              <tr>
+                <td>연도</td>
+                <td>2021</td>
+                <td>2022</td>
+                <td>2023</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>사고자 수</td>
+                <td>[[${yearIjd[0].injrdprPercnt}]]</td>
+                <td>[[${yearIjd[1].injrdprPercnt}]]</td>
+                <td>[[${yearIjd[2].injrdprPercnt}]]</td>
+              </tr>
+              <tr>
+                <td>부상자 수</td>
+                <td>[[${yearIjd[0].vctmPercnt}]]</td>
+                <td>[[${yearIjd[1].vctmPercnt}]]</td>
+                <td>[[${yearIjd[2].vctmPercnt}]]</td>
+              </tr>
+              <tr>
+                <td>총 인명 피해자 수</td>
+                <td>[[${totalIjd[0]}]]</td>
+                <td>[[${totalIjd[1]}]]</td>
+                <td>[[${totalIjd[2]}]]</td>
+              </tr>
+              <tr>
+                <td>동산피해</td>
+                <td>[[${yearMoney[0].perpDmgAmt}]]000\</td>
+                <td>[[${yearMoney[1].perpDmgAmt}]]000\</td>
+                <td>[[${yearMoney[2].perpDmgAmt}]]000\</td>
+              </tr>
+              <tr>
+                <td>부동산피해</td>
+                <td>[[${yearMoney[0].restDmgAmt}]]000\</td>
+                <td>[[${yearMoney[1].restDmgAmt}]]000\</td>
+                <td>[[${yearMoney[2].restDmgAmt}]]000\</td>
+              </tr>
+              <tr>
+                <td>총 재산피해 소계 금액</td>
+                <td>[[${totalMoney[0]}]]000\</td>
+                <td>[[${totalMoney[1]}]]000\</td>
+                <td>[[${totalMoney[2]}]]000\</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="col-6">
+      <div class="row" style="margin-top: 30px;">
+        <div class="col-6 layer small-layer">
+          <div class="row" id="first_chart">
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartPeoDMG2021" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2022 인명피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartPeoDMG2022" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2023 인명피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartPeoDMG2023" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartPeoDMG2021R" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 layer small-layer">
+          <div class="row" id="second_chart">
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2021 재산피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartMnDMG2021" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2022 재산피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartMnDMG2022" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2023 재산피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartMnDMG2023" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="row">
+                    <div class="col">
+                      <h4 style="font-weight: bold; text-align: center;">2021 인명피해</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <canvas id="doughnut-chartMnDMG2021R" style="width: 100%; height: 100%;"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 layer more-small-layer">
+          <div class="row" id="first_total">
+            <div class="col">
+              <div class="row">
+                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[1]}]]명</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[2]}]]명</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 layer more-small-layer">
+          <div class="row" id="second_total">
+            <div class="col">
+              <div class="row">
+                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[1]}]]000\</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[2]}]]000\</div>
+              </div>
+              <div class="row">
+                <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </th:block>
 
-<th:block layout:fragment="content_js">
+<th:block layout:fragment="content_jsp">
   <!-- html 파일이 열릴 때 같이 실행 되는 js-->
-  <script src="/"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="/js/dmg/dmg_list.js"></script>
 </th:block>
+
 </html>
