--- a/src/main/resources/templates/content/dmg/dmg_list.html
+++ b/src/main/resources/templates/content/dmg/dmg_list.html
@@ -24,9 +24,9 @@
       border: 1px solid #dddddd;
       border-radius: 10px;
       background-color: white;
-      margin: 35px;
+      margin: 35px 35px 35px 255px;
       overflow: hidden;
-      padding: 0 50px;
+      padding: 0 61px;
       position: relative;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
@@ -35,6 +35,8 @@
       position: absolute;
       top: -0px;
       transition: 2s;
+      margin: 0 auto;
+      width: 100%;
     }
 
     #second_total {
@@ -61,6 +63,14 @@
 
     #second_chart>div {
       padding: 0px;
+    }
+    .totals{
+      height : 75px;
+      padding: 25px;
+    }
+    .totals2{
+      height : 75px;
+      padding: 25px 10px;
     }
   </style>
 
@@ -171,7 +181,7 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <canvas id="doughnut-chartMnDMG2021" style="width: 100%; height: 100%;"></canvas>
+                        <canvas id="doughnut-chartMnDMG2021" style="width: 300; height: 300;"></canvas>
                       </div>
                     </div>
                   </div>
@@ -185,7 +195,7 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <canvas id="doughnut-chartMnDMG2022" style="width: 100%; height: 100%;"></canvas>
+                        <canvas id="doughnut-chartMnDMG2022" style="width: 300; height: 300;"></canvas>
                       </div>
                     </div>
                   </div>
@@ -199,7 +209,7 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <canvas id="doughnut-chartMnDMG2023" style="width: 100%; height: 100%;"></canvas>
+                        <canvas id="doughnut-chartMnDMG2023" style="width: 300; height: 300;"></canvas>
                       </div>
                     </div>
                   </div>
@@ -213,7 +223,7 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <canvas id="doughnut-chartMnDMG2021R" style="width: 100%; height: 100%;"></canvas>
+                        <canvas id="doughnut-chartMnDMG2021R" style="width: 300; height: 300;"></canvas>
                       </div>
                     </div>
                   </div>
@@ -224,37 +234,37 @@
         </div>
         <div class="row">
           <div class="col-6 layer more-small-layer">
-            <div class="row" id="first_total">
-              <div class="col">
+            <div class="row" style="height: 100%; display: flex; justify-content: center;">
+              <div class="col" id="first_total" style="width: 50%; margin: 0 auto;">
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
+                  <div class="col totals">총 부상자 : [[${totalIjd[0]}]]명</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[1]}]]명</div>
+                  <div class="col totals">총 부상자 : [[${totalIjd[1]}]]명</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[2]}]]명</div>
+                  <div class="col totals">총 부상자 : [[${totalIjd[2]}]]명</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 부상자 : [[${totalIjd[0]}]]명</div>
+                  <div class="col totals">총 부상자 : [[${totalIjd[0]}]]명</div>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-6 layer more-small-layer">
-            <div class="row" id="second_total">
-              <div class="col">
+            <div class="row" style="height: 100%; display: flex; justify-content: center;">
+              <div class="col" id="second_total" style="width: 70%; margin: 0 auto;">
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[0]}]],000</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[1]}]]000\</div>
+                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[1]}]],000</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[2]}]]000\</div>
+                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[2]}]],000</div>
                 </div>
                 <div class="row">
-                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
+                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[0]}]],000</div>
                 </div>
               </div>
             </div>
