--- a/src/main/resources/templates/content/dmg/dmg_list.html
+++ b/src/main/resources/templates/content/dmg/dmg_list.html
@@ -26,13 +26,9 @@
       border: 1px solid #dddddd;
       border-radius: 10px;
       background-color: white;
-      margin: 35px 35px 35px 255px;
+      margin: 35px;
       overflow: hidden;
-<<<<<<< HEAD
       padding: 0 226px;
-=======
-      padding: 0 61px;
->>>>>>> minjae
       position: relative;
       /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
     }
@@ -41,8 +37,6 @@
       position: absolute;
       top: -0px;
       transition: 2s;
-      margin: 0 auto;
-      width: 100%;
     }
 
     #second_total {
@@ -69,14 +63,6 @@
 
     #second_chart>div {
       padding: 0px;
-    }
-    .totals{
-      height : 75px;
-      padding: 25px;
-    }
-    .totals2{
-      height : 75px;
-      padding: 25px 10px;
     }
   </style>
 
@@ -250,7 +236,6 @@
         </div>
 
         <div class="row">
-<<<<<<< HEAD
           <div class="col more-small-layer layer">
             <div class="row" id="first_total">
               <div class="col">
@@ -265,46 +250,24 @@
                 </div>
                 <div class="row">
                   <div class="col" style="height: 75px; vertical-align: middle;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;총 부상자 : [[${totalIjd[0]}]]명</div>
-=======
-          <div class="col-6 layer more-small-layer">
-            <div class="row" style="height: 100%; display: flex; justify-content: center;">
-              <div class="col" id="first_total" style="width: 50%; margin: 0 auto;">
-                <div class="row">
-                  <div class="col totals">총 부상자 : [[${totalIjd[0]}]]명</div>
-                </div>
-                <div class="row">
-                  <div class="col totals">총 부상자 : [[${totalIjd[1]}]]명</div>
-                </div>
-                <div class="row">
-                  <div class="col totals">총 부상자 : [[${totalIjd[2]}]]명</div>
-                </div>
-                <div class="row">
-                  <div class="col totals">총 부상자 : [[${totalIjd[0]}]]명</div>
->>>>>>> minjae
                 </div>
               </div>
             </div>
           </div>
-<<<<<<< HEAD
           <div class="col layer more-small-layer">
             <div class="row text-align text-center" id="second_total">
               <div class="col">
-=======
-          <div class="col-6 layer more-small-layer">
-            <div class="row" style="height: 100%; display: flex; justify-content: center;">
-              <div class="col" id="second_total" style="width: 70%; margin: 0 auto;">
->>>>>>> minjae
                 <div class="row">
-                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[0]}]],000</div>
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
                 </div>
                 <div class="row">
-                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[1]}]],000</div>
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[1]}]]000\</div>
                 </div>
                 <div class="row">
-                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[2]}]],000</div>
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[2]}]]000\</div>
                 </div>
                 <div class="row">
-                  <div class="col totals2">총 피해금액 : \ [[${totalMoney[0]}]],000</div>
+                  <div class="col" style="height: 75px;">총 피해금액 : [[${totalMoney[0]}]]000\</div>
                 </div>
               </div>
             </div>
